# PyGPT

./: .env  .gitignore  README.md  pygpt.py  pyproject.toml  style.tcss
pygpt/: app.py  style.tcss
pygpt/config/: __init__.py
pygpt/llm/: gpt.py
pygpt/tui/: wd_config.py  wd_message.py  wd_question.py
tests/: .env  test_gpt.py  test_gpt_api.py  test_tui.py
