[tool.poetry]
name = "pygpt"
version = "0.1.0"
description = "TUI App for ChatGPT"
authors = ["core.ui <roman.thimian@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.8"
textual = "^0.52.1"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
