[tool.poetry]
name = "pygpt"
version = "0.1.0"
description = "TUI App for ChatGPT"
authors = ["core.ui <roman.thimian@me.com>"]
readme = "README.md"
license = "MIT"
include = ["style.tcss"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.10"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.8"
textual = "^0.52.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
pygpt = "pygpt.app:main"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
